--- a/Codigo/pokemon.html
+++ b/Codigo/pokemon.html
@@ -4,12 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PokeCoach información de los equipos de pokemon</title>
-  <link rel="stylesheet" href="E:\M8UF5\Codigo\pokemon.css">
-</head> <! -- WikiCoach -->
+  <link rel="stylesheet" href="C:\Bemen3\Codigo\pokemon.css">
+</head> <!-- WikiCoach -->
 <body>
-      <div class="pino">
       <h1 class="entrada">PokeEntrenadores</h1>
-      </div> 
 
     <div class="roto">
       <div class="bord">
@@ -19,7 +17,7 @@
         <div class="s"> 
         <div class="todos1"> <!-- primero -->
             <p class="titulpoke">Rojo</p>
-            <a href="file:///E:/M8UF5/Index/wiki.html"><img src="E:\M8UF5\Codigo\fotos\ash.png" class="imagen1"></a>
+            <a href="file:///C:/Bemen3/Codigo/fotos/wiki.html"><img src="C:\Bemen3\Codigo\fotos\ash.png" class="imagen1"></a>
             <div class="infos1">
               <h3> Equipo Valor (Rojo)</h3>
           <ul class="info">
@@ -34,7 +32,7 @@
       <div class="ss">
       <div class="todos2"> <!-- segundo -->
       <p class="titulpoke">Azul</p>
-        <a href="file:///E:/M8UF5/Index/wiki.html"><img src="E:\M8UF5\Codigo\fotos\cool.png" class="imagen2"></a>
+        <a href="file:///C:/Bemen3/odigo/fotos/wiki.html"><img src="C:\Bemen3\Codigo\fotos\cool.png" class="imagen2"></a>
         <div class="infos2">
           <h3>Equipo Sabiduría (Azul)</h3>
           <ul class="info1">
@@ -49,7 +47,7 @@
       <div class="sss">
       <div class="todos3"> <! -- Trecero -->
       <p class="titulpoke">Amarillo</p>
-        <a href="file:///E:/M8UF5/Index/wiki.html"><img src="E:\M8UF5\Codigo\fotos\guitarrista.png" class="imagen3"></a>
+        <a href="file:///C:/Bemen3/Codigo/fotos/wiki.html"><img src="C:\Bemen3\Codigo\fotos\guitarrista.png" class="imagen3"></a>
         <div class="infos3">
           <h3>Equipo Instinto (Amarillo)</h3>
           <ul class="info2">
@@ -68,15 +66,12 @@
     <div class="swiper-wrapper">
       <div class="slider-item swiper-slide">
         <div class="slider-image-wrapper">
-          <img class="slider-image"
-            src="E:\M8UF5\Codigo\fotos\candela.png"
+          <img class="slider-image-solo"
+            src="C:\Bemen3\Codigo\fotos\candela.png"
             alt="SliderImg">
         </div>
-        <div 
-        class="pc-slider create-line-left">
-        </div>
         <div class="slider-item-content">
-          <h1 class="slideh1">PC normal</h1>
+          <h1 class="slideh1">Candela</h1>
           <p class="slidep">
             AMD Ryzen 5 5600G 
             <br>
@@ -94,12 +89,9 @@
 
       <div class="slider-item swiper-slide">
         <div class="slider-image-wrapper">
-          <img class="slider-image"
-            src="C:\Bemen3\M8UF5\M8UF5\Fotos\ordenadorpro.png"
+          <img class="slider-image-solo"
+            src="C:\Bemen3\Codigo\fotos\blanche.png"
             alt="SliderImg">
-        </div>
-        <div 
-        class="pc-slider create-line-left">
         </div>
         <div class="slider-item-content">
           <h1 class="slideh1">PC pro</h1>
@@ -117,13 +109,10 @@
         </div>
       </div>
       <div class="slider-item swiper-slide">
-        <div class="slider-image-solo">
-          <img class="slider-image"
-            src="C:\Bemen3\M8UF5\M8UF5\Fotos\solo.png"
+        <div class="slider-image-wrapper">
+          <img class="slider-image-solo"
+            src="C:\Bemen3\Codigo\fotos\spark.png"
             alt="SliderImg">
-        </div>
-        <div 
-        class="pc-slider create-line-left">
         </div>
         <div class="slider-item-content">
           <h1 class="slideh1">Habitación "solo"</h1>
@@ -139,20 +128,6 @@
             Teclado Ozone Tactical</p>
         </div>
       </div>
-      <div class="slider-item swiper-slide">
-        <div class="slider-image-wrapper">
-          <img class="slider-image"
-            src="C:\Bemen3\M8UF5\M8UF5\Fotos\playstation.png"
-            alt="SliderImg">
-        </div>
-        <div 
-        class="pc-slider create-line-left">
-        </div>
-        <div class="slider-item-content">
-          <h1 class="slideh1">Playstation 5</h1>
-          <p>TV'55 4k</p>
-        </div>
-      </div>
     </div>
     <div class="slider-buttons">
       <button class="swiper-button-prev">Prev</button>
@@ -163,7 +138,7 @@
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.5/swiper-bundle.min.js'></script>
-  <script src="E:\M8UF5\js\pokemon.js"></script>
+  <script src="C:\Bemen3\Codigo\pokemon.js"></script>
   </body>
 </html>
 
